# lumen

./: .envrc  .gitignore  Cargo.toml  LICENSE  LICENSE-AGPL  README.md  flake.nix
_demo/: Justfile  n1.serverlumen.toml  n2.serverlumen.toml  n3.serverlumen.toml
demo/: protolumen.toml
lume/: eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js
lume/src/: app.css
lume/src/routes/: +page.svelte
protolumen/: Cargo.toml  build.rs
protolumen/schema/: protolumen.capnp
protolumen/src/: lib.rs  schema.rs
protolumen/src/schema/: protolumen_capnp.rs
protolumen/v1/: client.proto  protolumen.proto  server.proto
protolumen/v1/client/: auth.proto
serverlumen/: .env.example  Cargo.toml  build.rs  container-compose.yaml  diesel.toml  init.sql
serverlumen/clorinde/src/: queries.rs
serverlumen/clorinde/src/queries/: authors.rs
serverlumen/examples/basic/: Justfile  s1.serverlumen.toml  s2.serverlumen.toml  s3.serverlumen.toml
serverlumen/migrations/2025-05-08-041926_user/: down.sql  up.sql
serverlumen/protolumen/: README.md
serverlumen/protolumen/v1/: client.proto  protolumen.proto  server.proto
serverlumen/protolumen/v1/client/: auth.proto  conn.proto
serverlumen/protolumen/v1/server/: conn.proto
serverlumen/queries/: authors.sql  user.sql
serverlumen/src/: client.rs  config.rs  main.rs  service.rs
serverlumen/src/service/: client.rs  server.rs
tumen/: Cargo.toml  build.rs
tumen/src/: main.rs
