[package]
name = "serverlumen"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE-AGPL"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
names = "0.14.0"
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.223", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v8"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
