[package]
name = "tumen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
uuid = { version = "1.18.1", features = ["v8"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
